--- a/META.yml
+++ b/META.yml
@@ -1,12 +1,33 @@
---- #YAML:1.0
-name: DateTime-Calendar-FrenchRevolutionary
-version: 0.07
+---
+abstract: 'Dates in the French Revolutionary Calendar'
+author:
+  - 'Jean Forget <JFORGET@cpan.org>'
+build_requires: {}
+configure_requires:
+  Module::Build: 0.40
+dynamic_config: 1
+generated_by: 'Module::Build version 0.4001, CPAN::Meta::Converter version 2.110930'
 license: perl
-distribution_type: module
+meta-spec:
+  url: http://module-build.sourceforge.net/META-spec-v1.4.html
+  version: 1.4
+name: DateTime-Calendar-FrenchRevolutionary
+provides:
+  DateTime::Calendar::FrenchRevolutionary:
+    file: lib/DateTime/Calendar/FrenchRevolutionary.pm
+    version: 0.11
+  DateTime::Calendar::FrenchRevolutionary::Locale:
+    file: lib/DateTime/Calendar/FrenchRevolutionary/Locale.pm
+    version: 0.11
+  DateTime::Calendar::FrenchRevolutionary::Locale::en:
+    file: lib/DateTime/Calendar/FrenchRevolutionary/Locale/en.pm
+    version: 0.11
+  DateTime::Calendar::FrenchRevolutionary::Locale::fr:
+    file: lib/DateTime/Calendar/FrenchRevolutionary/Locale/fr.pm
+    version: 0.11
 requires:
   DateTime: 0.14
-  Roman: 0
-recommends: {}
-build_requires: {}
-conflicts: {}
-generated_by: Module::Build version 0.16
+  Roman: 1.22
+resources:
+  license: http://dev.perl.org/licenses/
+version: 0.11
