--- a/META.yml
+++ b/META.yml
@@ -6,7 +6,7 @@ build_requires: {}
 configure_requires:
   Module::Build: 0.40
 dynamic_config: 1
-generated_by: 'Module::Build version 0.4001, CPAN::Meta::Converter version 2.110930'
+generated_by: 'Module::Build version 0.4007, CPAN::Meta::Converter version 2.110440'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -28,6 +28,7 @@ provides:
 requires:
   DateTime: 0.14
   Roman: 1.22
+  perl: v5.8.5
 resources:
   license: http://dev.perl.org/licenses/
 version: 0.12
