--- a/META.yml
+++ b/META.yml
@@ -4,31 +4,31 @@ author:
   - 'Jean Forget <JFORGET@cpan.org>'
 build_requires: {}
 configure_requires:
-  Module::Build: 0.40
+  Module::Build: '0.40'
 dynamic_config: 1
-generated_by: 'Module::Build version 0.4007, CPAN::Meta::Converter version 2.110440'
+generated_by: 'Module::Build version 0.4007, CPAN::Meta::Converter version 2.143240'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
-  version: 1.4
+  version: '1.4'
 name: DateTime-Calendar-FrenchRevolutionary
 provides:
   DateTime::Calendar::FrenchRevolutionary:
     file: lib/DateTime/Calendar/FrenchRevolutionary.pm
-    version: 0.13
+    version: '0.13'
   DateTime::Calendar::FrenchRevolutionary::Locale:
     file: lib/DateTime/Calendar/FrenchRevolutionary/Locale.pm
-    version: 0.13
+    version: '0.13'
   DateTime::Calendar::FrenchRevolutionary::Locale::en:
     file: lib/DateTime/Calendar/FrenchRevolutionary/Locale/en.pm
-    version: 0.13
+    version: '0.13'
   DateTime::Calendar::FrenchRevolutionary::Locale::fr:
     file: lib/DateTime/Calendar/FrenchRevolutionary/Locale/fr.pm
-    version: 0.13
+    version: '0.13'
 requires:
-  DateTime: 0.14
-  Roman: 1.22
+  DateTime: '0.14'
+  Roman: '1.22'
   perl: v5.8.5
 resources:
   license: http://dev.perl.org/licenses/
-version: 0.13
+version: '0.13'
